cmake_minimum_required(VERSION 2.6)
find_package(RoomPlugins REQUIRED)

SET(CONFIG_${PROJECT_NAME}_SERVER "127.0.0.1:9777" CACHE STRING "XBMC Server")
SET(CONFIG_SERVERS ${CONFIG_${PROJECT_NAME}_SERVERS})
configure_file(configplugin.h.in configplugin.h @ONLY)

SET(DEBFOUND TRUE)
IF (DEBFOUND)
	OPTION(PLUGIN_${PROJECT_NAME}_CLIENT "Plugin ${PROJECT_NAME} Client" ON)
	OPTION(PLUGIN_${PROJECT_NAME}_SERVER "Plugin ${PROJECT_NAME} Server" ON)

	IF (PLUGIN_${PROJECT_NAME}_CLIENT)
		build_client_lib()
		target_link_libraries(${PROJECT_NAME}_client ${QT_QTCORE_LIBRARY})
		install_client_lib()
	ENDIF()
	IF (PLUGIN_${PROJECT_NAME}_SERVER)
		build_server_lib()
		IF(WIN32)
		SET(WIN_SOCKS "-lWs2_32")
		ENDIF()
		target_link_libraries(${PROJECT_NAME}_server ${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARIES} ${WIN_SOCKS})
		install_server_lib()
	ENDIF()
ELSE()
	MESSAGE("Not building: ${PROJECT_NAME}")
ENDIF()
